--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: android
-node_js:
-  - 10
+# node_js: 10
 android:
   components:
     - build-tools-28.0.3
@@ -14,7 +13,8 @@ cache:
     - $HOME/.gradle/wrapper/
     - $HOME/.android/build-cache
 before_install:
-    - yes | sdkmanager "platforms;android-28"
+  - nvm install 10
+  - yes | sdkmanager "platforms;android-28"
 before_script:
   - ./gradlew testReleaseUnitTest --tests net.bible.service.download.CrosswireRepoIT
 
