Remove loader.js from repository

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /app/bibleview-js/.idea/
 /app/src/main/assets/web/.idea/
 /app/src/main/assets/web/.sourcemaps/
+/app/src/main/assets/web/loader.js
