--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,13 +124,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0"
 
-    implementation 'com.google.dagger:dagger:2.16'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-    kapt 'com.google.dagger:dagger-compiler:2.16'
+    implementation 'com.google.dagger:dagger:2.25.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.25.2'
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
 
     implementation 'de.greenrobot:eventbus:2.4.1'
 
-    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation 'org.apache.commons:commons-lang3:3.9'
 
     // We are using our custom-built jsword.jar (see https://github.com/AndBible/jsword-tweaks)
     implementation files('libs/jsword.jar')
@@ -148,9 +148,9 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation "org.robolectric:shadows-multidex:4.3.1"
     testImplementation 'org.apache.httpcomponents:httpclient:4.3.2'
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
-    testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    testImplementation 'org.mockito:mockito-core:2.8.9'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
+    testImplementation 'org.mockito:mockito-core:3.1.0'
     testImplementation 'junit:junit:4.12'
 }
 
