--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /app/src/main/assets/web/.idea/
 /app/src/main/assets/web/.sourcemaps/
 /app/src/main/assets/web/loader.js
+/app/bibleview-js/dist/
